// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hall > should correspond default layout 1`] = `
<div>
  <div
    class="_hall_23b2aa"
  >
    <div
      class="_hallScreen_23b2aa"
    />
  </div>
</div>
`;

exports[`Hall > should support the "children" prop 1`] = `
<div>
  <div
    class="_hall_23b2aa"
  >
    <div
      class="_hallScreen_23b2aa"
    />
    Children
  </div>
</div>
`;
